# client-server-chat-application

./: CMakeLists.txt  README.md  UserAccount.cpp  UserAccount.h  chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h  chat.proto  client  client-grpc.cpp  client-grpc.py  client.cpp  client.py  custom_wire_protocol.cpp  engineering-notebook.txt  json_wire_protocol.cpp  server  server-grpc.cpp  server.cpp  server.crt  server.h  server.key  test-grpc.cpp  wire_protocol.h
eng-notebook/: eng-notebook-jesse.txt  eng-notebook-ruben.md  eng-notebook-ruben.txt
eng-notebooks/: eng-notebook-ruben-valenzuela.txt
gRPC-impl/: chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h  chat.proto  chat_service_impl.h  client_grpc.cpp  client_grpc.h  server_grpc.cpp  server_grpc.h
gRPC-impl/proto/: chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h  chat.proto
test/: client_test.cpp  integrated_test.cpp  server_test.cpp
user_auth/: user_auth.cpp  user_auth.h
vault/: client.cpp
wire_protocol/: custom_wire_protocol.cpp  custom_wire_protocol.h  json_wire_protocol.cpp  json_wire_protocol.h  packet.cpp  packet.h
